# duelist

./: .gitignore  CREDITS.md  Makefile  README.md
circuits/: Nargo.toml
circuits/deposit/: Nargo.toml  Prover.toml
circuits/deposit/src/: main.nr
circuits/hash_helper/: Nargo.toml  Prover.toml
circuits/hash_helper/src/: main.nr
circuits/lib_shield/: Nargo.toml
circuits/lib_shield/src/: babyjubjub.nr  joinsplit.nr  lib.nr  merkle.nr  note.nr  poseidon2.nr  schnorr.nr
circuits/transfer/: Nargo.toml  Prover.toml
circuits/transfer_batch/: Nargo.toml  Prover.toml
circuits/withdraw/: Nargo.toml  Prover.toml
circuits/withdraw_large/: Nargo.toml  Prover.toml
circuits/withdraw_small/: Nargo.toml  Prover.toml
contracts/: Cargo.toml
contracts/compliance/: Cargo.toml
contracts/engine/: Cargo.toml
contracts/engine/engine/: Cargo.toml
contracts/engine/engine/src/: lib.rs
contracts/pool/: Cargo.toml
contracts/verifier/: Cargo.toml
dapp/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
dapp/public/: _headers  _redirects  manifest.webmanifest
dapp/src/: App.tsx  main.tsx  vite-env.d.ts
deploy/nginx/: shield-protocol.conf
deploy/scripts/: 00-prereqs.sh  01-build.sh  02-deploy.sh  03-run-dapp.sh  04-production.sh  deploy.sh  up.sh  watchdog.sh
indexer/: .env.example  package-lock.json  package.json
indexer/src/: server.ts
relayer/: .env.example  package-lock.json  package.json
relayer/src/: server.ts
sdk/: package-lock.json  package.json  test_poseidon_match.mjs  tsconfig.json
sdk/src/: index.ts
(+56 files in other folders)
