[workspace]
resolver = "2"
members = ["engine"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shield Protocol"]
license = "MIT"

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "acffbbd45be6a0a551146eebfc268d6f95078246" }
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/rs-soroban-ultrahonk", package = "ultrahonk_soroban_verifier" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
